# torr

./: .gitignore  .pre-commit-config.yaml  LICENCE  LICENSE  README.md  config.json  pyproject.toml
examples/: Client.py  README.md  alpine-minirootfs-3.23.3-aarch64.tar.gz.torrent  example.py
src/torr/: __init__.py  bcoder.py  bittorrent.py  cli.py  client.py  config.py  configuration.py  exceptions.py  http_tracker.py  message.py  message_factory.py  peer.py  peers_manager.py  piece.py  storage.py  swarm.py  torrent_file.py  tracker.py  tracker_factory.py  tracker_manager.py  udp_tracker.py  udp_tracker_message.py  utils.py
src/torr/oop/: message.py  peer.py  piece.py  router.py  swarm.py  torrent_file.py  tracker.py
src/torrentclient/: Bittorrent.py  Configuration.py  Exceptions.py  HTTPTracker.py  MessageFactory.py  Peer.py  PeersManager.py  Piece.py  TorrentFile.py  Tracker.py  TrackerFactory.py  TrackerManager.py  UDPTracker.py  UDPTrackerMessage.py  Utils.py  __init__.py  bcoder.py  bittorrent.py  exceptions.py  http_tracker.py  message.py  message_factory.py  peer.py  peers_manager.py  piece.py  tracker.py  tracker_factory.py  tracker_manager.py  udp_tracker.py  udp_tracker_message.py  utils.py
tests/: test_bcoder.py  test_create_pieces.py  test_messages.py  test_utils.py
torrentclient/: Bittorrent.py  Block.py  Configuration.py  Exceptions.py  HTTPTracker.py  Message.py  MessageFactory.py  Peer.py  PeersManager.py  Piece.py  PiecesManager.py  TorrentFile.py  Tracker.py  TrackerFactory.py  TrackerManager.py  UDPTracker.py  UDPTrackerMessage.py  Utils.py  __init__.py  bcoder.py
